--- a/index.html
+++ b/index.html
@@ -155,9 +155,10 @@
     <section id="ai">
       <header class="grid grid-flow-col">
         <h3>Destaques da Inteligência Artificial</h3>
-        <a href="#" class="grid grid-flow-col"></a>
-        <strong>Ver tudo</strong>
-        <span></span>
+        <a href="#" class="grid grid-flow-col">
+          <strong>Ver tudo</strong>
+          <span></span>
+        </a>
       </header>
 
       <div class="grid gap-32">
@@ -171,8 +172,7 @@
             <p class="text-sm">
               Em um avanço surpreendente da inteligência artificial, uma empresa anuncia o desenvolvimento de um
               algoritmo capaz de prever eventos futuros com notável precisão. Descubra como essa tecnologia está
-              desafiando as fronteiras da previsão e quais são as implicações para diversas áreas, desde finanças até
-              pla...
+              desafiando as fronteiras da previsão e quais são as implicações para diversas áreas, desde...
             </p>
           </div>
           <div>
@@ -191,8 +191,7 @@
             <p class="text-sm">
               Em um mundo cada vez mais conectado, a comunicação sem fronteiras é essencial. Nesse contexto, um
               dispositivo portátil surge como um verdadeiro herói linguístico, prometendo quebrar as barreiras
-              idiomáticas instantaneamente. Imagine poder se comunicar fluentemente em qualquer lugar do mundo,
-              indepe...
+              idiomáticas instantaneamente. Imagine poder se comunicar fluentemente em qualquer lu...
             </p>
           </div>
           <div>
@@ -206,12 +205,12 @@
             <spa class="content-tag">Inteligência Artificial</spa>
             <h3 class="text-xl">
               Criados para auxiliar idosos, robôs de companhia ganham popularidade, oferecendo suporte emocional e
-              físico aos usu...
+              físico aos...
             </h3>
             <p class="text-sm">
               A tecnologia não só avança, mas também busca tornar a vida mais significativa para todas as gerações. No
               cenário atual, os robôs sociais, projetados especialmente para oferecer apoio e companhia aos idosos,
-              estão ganhando destaque. Mais do que meros assistentes, esses robôs são programados para f...
+              estão ganhando destaque. Mais do que meros assistentes, esses robôs são progra...
             </p>
           </div>
           <div>
@@ -230,7 +229,7 @@
             <p class="text-sm">
               No turbilhão da vida moderna, onde distrações são abundantes, um aplicativo inovador surge como um aliado
               indispensável para quem busca maior concentração e eficiência no cotidiano. Utilizando avançados
-              algoritmos de inteligência artificial, este aplicativo promete mais do que simplesmente gerenci...
+              algoritmos de inteligência artificial, este aplicativo promete mais do que simplesmente gere...
             </p>
           </div>
           <div>
@@ -241,82 +240,84 @@
 
       </div>
     </section>
-
-    <div id="ads">
-      <img src="assets/Ads.png" alt="Propaganda patrocinada">
-    </div>
-
-    <section id="more">
-      <header class="grid grid-flow-col">
-        <h3>Viu isso aqui?</h3>
-        <a href="#" class="grid grid-flow-col"></a>
-        <strong>Ver tudo</strong>
-        <span></span>
-      </header>
-
-      <div class="grid gap-32">
-
-        <article class="grid grid-flow-col gap-16">
-          <div>
-            <img src="assets/images/Image 14.png"
-              alt="Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e promovendo a conscientização.">
-          </div>
-          <div>
-            <spa class="content-tag">Software</spa>
-            <h3 class="text-xl">
-              Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e pro...
-          </div>
-        </article>
-
-        <article class="grid grid-flow-col gap-16">
-          <div>
-            <img src="assets/images/Image 15.png"
-              alt="Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial completa, imergindo usuários em ambientes digitais.">
-          </div>
-          <div>
-            <spa class="content-tag">Realidade Virtual</spa>
-            <h3 class="text-xl">
-              Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial complet...
-          </div>
-        </article>
-
-        <article class="grid grid-flow-col gap-16">
-          <div>
-            <img src="assets/images/Image 16.png"
-              alt="Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o impacto ambiental associado à mineração de criptomoedas.">
-          </div>
-          <div>
-            <spa class="content-tag">Criptomoedas</spa>
-            <h3 class="text-xl">
-              Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o i...
-          </div>
-        </article>
-
-        <article class="grid grid-flow-col gap-16">
-          <div>
-            <img src="assets/images/Image 17.png"
-              alt="Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o cenário do comércio online.">
-          </div>
-          <div>
-            <spa class="content-tag">Drones</spa>
-            <h3 class="text-xl">
-              Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o ce...
-          </div>
-        </article>
-
-        <article class="grid grid-flow-col gap-16">
-          <div>
-            <img src="assets/images/Image 18.png"
-              alt="Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medicina e a lista de espera por transplantes.">
-          </div>
-          <div>
-            <spa class="content-tag">Impressão 3d</spa>
-            <h3 class="text-xl">
-              Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medicina e a li...
-          </div>
-        </article>
+    <aside>
+      <div id="ads">
+        <img src="assets/Ads.png" alt="Propaganda patrocinada">
       </div>
-    </section>
+
+      <section id="more">
+        <header class="grid grid-flow-col">
+          <h3>Viu isso aqui?</h3>
+          <a href="#" class="grid grid-flow-col">
+            <strong>Ver tudo</strong>
+            <span></span>
+          </a>
+        </header>
+
+        <div class="grid gap-32">
+
+          <article class="grid grid-flow-col gap-16">
+            <div>
+              <img src="assets/images/Image 14.png"
+                alt="Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e promovendo a conscientização.">
+            </div>
+            <div>
+              <spa class="content-tag">Software</spa>
+              <h3 class="text-xl">
+                Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e...
+            </div>
+          </article>
+
+          <article class="grid grid-flow-col gap-16">
+            <div>
+              <img src="assets/images/Image 15.png"
+                alt="Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial completa, imergindo usuários em ambientes digitais.">
+            </div>
+            <div>
+              <spa class="content-tag">Realidade Virtual</spa>
+              <h3 class="text-xl">
+                Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial com...
+            </div>
+          </article>
+
+          <article class="grid grid-flow-col gap-16">
+            <div>
+              <img src="assets/images/Image 16.png"
+                alt="Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o impacto ambiental associado à mineração de criptomoedas.">
+            </div>
+            <div>
+              <spa class="content-tag">Criptomoedas</spa>
+              <h3 class="text-xl">
+                Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar...
+            </div>
+          </article>
+
+          <article class="grid grid-flow-col gap-16">
+            <div>
+              <img src="assets/images/Image 17.png"
+                alt="Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o cenário do comércio online.">
+            </div>
+            <div>
+              <spa class="content-tag">Drones</spa>
+              <h3 class="text-xl">
+                Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando...
+            </div>
+          </article>
+
+          <article class="grid grid-flow-col gap-16">
+            <div>
+              <img src="assets/images/Image 18.png"
+                alt="Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medicina e a lista de espera por transplantes.">
+            </div>
+            <div>
+              <spa class="content-tag">Impressão 3d</spa>
+              <h3 class="text-xl">
+                Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medicina e...
+            </div>
+          </article>
+        </div>
+      </section>
+    </aside>
   </main>
 </body>
 
